<resources>
    <string name="app_name">Budget App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trans">Trans.</string>
    <string name="stats">Stats</string>
    <string name="accounts">Accounts</string>
    <string name="select_date">Select Date</string>
    <string name="amount">Amount</string>
    <string name="category">Category</string>
    <string name="account">Account</string>
    <string name="note">Note</string>
    <string name="save_transaction">Save Transaction</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="total">Total</string>
    <string name="_0_0">0.0</string>
    <string name="cash">Cash</string>
    <string name="_17_may_2023">17 May, 2023</string>
    <string name="_1000">1000</string>
    <string name="textview">TextView</string>
    <string name="business">Business</string>
    <string name="daily">Daily</string>
    <string name="monthly">Monthly</string>
    <string name="calendar">Calendar</string>
    <string name="summary">Summary</string>
    <string name="notes">Notes</string>
    <string name="may_17_2023">May 17, 2023</string>
    <string name="search">Search</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="track_your_spending_unlock_your_savings">Track Your Spending, Unlock Your Savings!</string>
    <string name="emoji">💰💸</string>
</resources>